# ALGO_LAB_6

./: .gitignore  CMakeLists.txt  README.txt
include/: aho_corasick.hpp  wildcard_functions.hpp
src/: CMakeLists.txt  aho_corasick.cpp  patterns_search.cpp  wild_card.cpp  wildcard_functions.cpp
test/: CMakeLists.txt  test.cpp  test1.cpp  test2.cpp
